--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,35 @@ header {
 }
 
 /* .phone-section  */
+
+.about{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.about .content{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+}
+
+.about .profile{
+    max-width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.profile span{
+    font-weight: 900;
+    font-size: 1.4em;
+}
+
+
 h4 {
     font-family: "Inter";
     font-size: 40px;
