--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ header {
     margin-left: auto;
     margin-right: auto;
     height: 100%;
-    width: 50%;
+    width: 70%;
     z-index: 0;
     overflow: hidden;
 }
@@ -277,7 +277,20 @@ header {
 }
 
 .candle-section.static .detail-description {
-    max-width: 40%;
+    max-width: 30%;
+    margin: 0 0 0 15px;
+}
+
+.candle-section.static .model{
+    width: 100%;
+}
+
+.detail-description.animated{
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
+    animation-timing-function: linear;
+    animation-name: detailAnimation;
 }
 
 .Hotspot {
@@ -412,6 +425,7 @@ section.day-night {
 .day-night .candle-section {
     height: 100vh;
     overflow: hidden;
+    width: 100%;
 }
 
 .day-night .candle-section .wix-img {
@@ -420,6 +434,7 @@ section.day-night {
 
 .day-night.animated {
     position: relative;
+    width: 80vw;
 }
 
 .moon-sun-span {
@@ -461,6 +476,7 @@ section.day-night {
 .day-night .text-content {
     text-align: center;
     width: 980px;
+    margin-bottom: 3vh;
 }
 
 footer {
@@ -746,6 +762,17 @@ footer {
     }
 }
 
+@keyframes detailAnimation {
+    from{
+        width: 0%;
+        opacity: 0;
+    }
+    to{
+        width: 30%;
+        opacity: 1;
+    }
+}
+
 
 /* STEPS ANIMaTION */
 .element-show .light.center {
@@ -819,6 +846,8 @@ footer {
     flex-direction: row;
     justify-content: center !important;
 }
+
+
 
 
 @keyframes spin {
@@ -1048,4 +1077,34 @@ footer {
     .sun{
         top: 0;
     }
+}
+
+@media (min-width: 1025px) and (max-width:1289px){
+    .candle-section-head.animated {
+        animation-name: candleUP3;
+    }
+
+    .candle-section-head {
+        animation-name: candleBACK3;
+    }
+
+    @keyframes candleUP3 {
+        0% {
+            transform: translateY(0) scale(1);
+        }
+        100% {
+            transform: translateY(5vh) scale(0.7);
+        }
+    }
+
+    @keyframes candleBACK3 {
+        0% {
+            transform: translateY(5vh) scale(0.7);
+        }
+        100% {
+            transform: translateY(0) scale(1);
+        }
+    }
+
+
 }
