--- a/css/style.css
+++ b/css/style.css
@@ -363,6 +363,33 @@ header {
 
 .phone-section .phone {
     width: 460px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.phone .logo{
+    position: absolute;    
+    width: 90%;
+}
+
+.phone .toclick{
+    width: 15px;
+    height: 15px;
+    background-color: var(--lightblue);
+    position: absolute;
+    left: -3%;
+    top: 21%;
+    border-radius: 100%;
+    box-shadow: 0px 0px 15px 0px rgba(244,242,245,1);
+}
+
+.phone .toclick:hover{
+    width: 20px;
+    height: 20px;
+    animation-duration: 1s;
 }
 
 .phone-section .content {
