--- a/css/style.css
+++ b/css/style.css
@@ -442,6 +442,7 @@ header {
     flex-wrap: nowrap;
     justify-content: space-around;
     align-items: center;
+    position: relative;
 }
 
 .about .content {
@@ -457,6 +458,26 @@ header {
     flex-direction: column;
     align-items: center;
     text-align: center;
+}
+
+.about .logo{
+    position: absolute;
+    max-width: 20%;
+    left: 1%;
+    top: 5%;
+}
+
+.about .logo.second{
+    left: 45%;
+    max-width: 10%;
+    top: 20%
+}
+
+.about .logo.third{
+    max-width: 20%;
+    right: 1%;
+    top: 5%;
+    left: auto;
 }
 
 .profile span {
@@ -479,10 +500,9 @@ h4 {
 
 .continue-section .logo{
     position: absolute;
-    max-width: 526px;
-    width: 60%;
-    right: -30vw;
-    top: 0;
+   max-width: 100%;
+    right:-100%;
+    top: -80%;
 }
 
 section.day-night {
