--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cardo&family=Inter&family=Montserrat&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cardo&family=Inter&family=Montserrat&family=Roboto&family=Georama&display=swap');
 
 :root {
     --red: #F05454;
@@ -24,7 +24,7 @@
 
 body {
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Georama', sans-serif;
     font-size: 18px;
     line-height: 1.4;
     color: var(--white);
@@ -77,7 +77,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Inter';
+    font-family: 'Georama', sans-serif;
     font-style: normal;
     font-weight: 600;
 }
@@ -202,6 +202,7 @@ header {
 .step span {
     opacity: 0;
     font-size: 32px;
+    font-weight: 600;
 }
 
 .step .step-content {
@@ -313,6 +314,11 @@ header {
 
 .candle-section.static .model{
     width: 100%;
+}
+
+.detail-description .title{
+    font-weight: 600;
+    font-size: 32px;
 }
 
 .detail-description.animated{
@@ -427,7 +433,6 @@ header {
 }
 
 .phone-section h3 {
-    font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
     font-size: 64px;
@@ -460,26 +465,6 @@ header {
     text-align: center;
 }
 
-.about .logo{
-    position: absolute;
-    max-width: 20%;
-    left: 1%;
-    top: 5%;
-}
-
-.about .logo.second{
-    left: 45%;
-    max-width: 10%;
-    top: 20%
-}
-
-.about .logo.third{
-    max-width: 20%;
-    right: 1%;
-    top: 5%;
-    left: auto;
-}
-
 .profile span {
     font-weight: 900;
     font-size: 1.4em;
@@ -487,8 +472,8 @@ header {
 
 
 h4 {
-    font-family: "Inter";
     font-size: 40px;
+    font-weight: 600;
 }
 
 .continue-section {
@@ -534,8 +519,8 @@ section.day-night {
 .moon-sun-span {
     top: 0;
     position: absolute;
-    height: 100vw;
-    width: 100vw;
+    height: 115vw;
+    width: 115vw;
     animation: 10s linear infinite dayNight;
 }
 
@@ -1002,7 +987,7 @@ footer {
 
 
 
-@media (max-width: 600px) {
+@media (max-width: 669px) {
     h1 {
         margin: 20px 0;
     }
@@ -1047,7 +1032,7 @@ footer {
         }
 
         100% {
-            transform: translateY(-70vh) scale(1);
+            transform: translateY(-100vh) scale(1);
 
         }
     }
@@ -1055,7 +1040,7 @@ footer {
 
     @keyframes candleBACKMOBILE {
         0% {
-            transform: translateY(-70vh) scale(1);
+            transform: translateY(-100vh) scale(1);
         }
 
         100% {
@@ -1076,6 +1061,33 @@ footer {
     .candle-section.static .detail-description {
         max-width: 80%;
         text-align: center;
+    }
+
+    .candle-section.static .detail-description.animated{
+        animation-name: detailAnimationMOBILE;
+    }
+
+    .candle-section.static .detail-description.shown{
+        height: 60%;
+        animation-name: detailOpacity
+    }
+
+    @keyframes detailAnimationMOBILE {
+        from{
+            height: 0%;
+        }
+        to{
+            height: 60%;
+        }
+    }
+
+    @keyframes detailOpacity {
+        from{
+            opacity: 0;
+        }
+        to{
+            opacity: 1;
+        }
     }
 
     .phone-section .section-header {
@@ -1106,14 +1118,46 @@ footer {
         width: 100%;
     }
 
+    .about .content{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .about .profile{
+        max-width: 65%;
+    }
+
     .moon-sun-span {
         height: 100vw;
         width: 100vh;
         animation: 10s linear infinite dayNight;
     }
+
+
+    .day-night .candle-section.static .model{
+        width: 50vh;
+    }
+
+    .day-night .candle-section {
+        height: 50vh;
+    }
+
+    .day-night .text-content {
+        font-size: 1.1em;
+        width: 90%;
+        z-index: 7;
+    }
+
+    .day-night .candle-section .wix-img {
+        width: 100%;
+    }
+
+    .sun{
+        top: 0;
+    }
 }
 
-@media (min-width: 601px) and (max-width: 1024px) {
+@media (min-width: 670px) and (max-width: 1024px) {
     .candle-section-head.animated {
         animation-name: candleUPTABLET;
     }
@@ -1137,6 +1181,42 @@ footer {
         width: 60vh;
     }
 
+    .section-steps{
+        flex-wrap: nowrap;
+    }
+
+    .candle-section.static .detail-description {
+        max-width: 90%;
+        margin: 0 0 0 15px;
+        opacity: 0;
+    }
+
+    .detail-description.animated{
+        animation-name: detailAnimationTABLET;
+    }
+
+    .detail-description.shown{
+        animation-name: detailOpacityTABLET;
+        height: 30%;
+    }
+
+    @keyframes detailAnimationTABLET {
+        from{
+            height: 0%;
+        }
+        to{
+            height: 30%;
+        }
+    }
+
+    @keyframes detailOpacityTABLET {
+        from{
+            opacity: 0;
+        }
+        to{
+            opacity: 1;
+        }
+    }
 
     @keyframes candleUPTABLET {
         0% {
@@ -1221,18 +1301,21 @@ footer {
             transform: translateY(0) scale(1);
         }
         100% {
-            transform: translateY(5vh) scale(0.7);
+            transform: translateY(-30vh) scale(0.7);
         }
     }
 
     @keyframes candleBACK3 {
         0% {
-            transform: translateY(5vh) scale(0.7);
+            transform: translateY(-30vh) scale(0.7);
         }
         100% {
             transform: translateY(0) scale(1);
         }
     }
 
+    .section-steps{
+        flex-wrap: nowrap;
+    }
 
 }
